Replace positional multi-target effects with declaration-driven group binding
The engine now resolves multi-target spells through the target-group mapping
the card DSL already declares: StackEntry.targetsForEffect/targetsForGroup
slice the flat target list by the card's target(...) declarations, so an
effect bound to a group applies to all targets chosen for that group. Wrapper
effects (ConditionalEffect, May*) propagate the binding to their inner effect,
and EffectResolutionService's targetId remap is group-aware instead of
assuming one target per preceding group.

All eight position-named effect records and their handlers are deleted:
- BoostFirst/BoostSecondTargetCreatureEffect -> BoostTargetCreatureEffect
  bound per group (Leeching Bite, Skulduggery, Assert Perfection, Chelonian
  Tackle, Burrog Barrage)
- PutPlusOnePlusOneCounterOnFirstTargetEffect -> PutCounterOnTargetPermanent-
  Effect bound to group 0, with a new resolutionCondition predicate for
  Ancient Animus's "if it's legendary"
- PutPlusOnePlusOneCounterOnEachCreatureFirstTargetPlayerControlsEffect ->
  position-agnostic ...EachCreatureTargetPlayerControlsEffect
- GrantChosenKeywordToSecondTargetEffect -> existing GrantChosenKeywordTo-
  TargetEffect (Practiced Offense)
- FirstTargetFightsSecondTargetEffect / FirstTargetDealsPowerDamageToSecond-
  TargetEffect -> FightTargetsEffect / TargetDealsPowerDamageToTargetEffect,
  carrying their two group indices as record data (flat positions for
  activated abilities, e.g. Huatli's -3)
- DealDamageToSecondaryTargetEffect -> DealDamageToAnyTargetEffect with an
  optional targetGroup (Goblin Barrage's kicked target)

Tap/PutCounter handlers drop their duplicated single-target-group guards in
favor of targetsForEffect. Wire format, GameService signatures, frontend and
AI flows are unchanged; fizzle semantics per CR 608.2b are preserved. Adds
StackEntryTargetGroupsTest for the slicing rules and updates the agent-docs
with the group-binding rule (never create 